[FIX] align social icons

--- a/dev/styles/main/contentElements/socialIcons.less
+++ b/dev/styles/main/contentElements/socialIcons.less
@@ -9,7 +9,7 @@
     display: inline-block;
     color: @social-icons-bg-color;
     padding-top: 12px;
-    padding: 8px;
+    padding: 0 8px;
     margin: 6px 10px;
     transition: color .2s;
 
